k8s-rewrite/charts/media-stack/radarr/service.yaml
# Radarr Service
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: plex
spec:
  type: ClusterIP
  ports:
  - port: 7878
    targetPort: 7878
    name: http
  selector:
    app: radarr
